Launch new main outside of the core C/R body