@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2024, Azul Systems, Inc. All rights reserved.
+ * Copyright (c) 2024, 2025, Azul Systems, Inc. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,31 +21,30 @@
  * have any questions.
  */
 
+import java.util.List;
+
 import jdk.test.lib.crac.CracBuilder;
 import jdk.test.lib.crac.CracTest;
 
-import java.io.IOException;
-import java.util.Arrays;
-
-/*
- * @test RestoreNewArgsTest
- * @summary the test checks new args are propagated into a restored process.
+/**
+ * @test
+ * @summary Checks that new args are parsed correctly.
  * @library /test/lib
- * @build RestoreNewArgsTest
+ * @build ArgsParsingTest
  * @run driver/timeout=120 jdk.test.lib.crac.CracTest
  * @requires (os.family == "linux")
  */
-public class RestoreNewArgsTest implements CracTest {
+public class ArgsParsingTest implements CracTest {
+    private static final String NEW_MAIN_CLASS = "ArgsParsingTest$InternalMain";
 
     @Override
     public void test() throws Exception {
-        final String MAIN_CLASS = "RestoreNewArgsTest$InternalMain";
         final String ARG0 = "test arg";
         final String ARG1 = "\\ another\\ \"test\\\\arg ";
         final String ARG2 = "  ano\007ther  'yet  arg  \\";
         CracBuilder builder = new CracBuilder().captureOutput(true);
         builder.doCheckpoint();
-        builder.startRestoreWithArgs(null, Arrays.asList(MAIN_CLASS, ARG0, ARG1, ARG2))
+        builder.startRestoreWithArgs(null, List.of(NEW_MAIN_CLASS, ARG0, ARG1, ARG2))
             .waitForSuccess().outputAnalyzer()
             .shouldContain("RESTORED")
             .shouldContain("Arg 0: " + ARG0 + ".")
@@ -60,7 +59,7 @@ public class RestoreNewArgsTest implements CracTest {
     }
 
     public class InternalMain {
-        public static void main(String args[]) throws Exception {
+        public static void main(String[] args) {
             int i = 0;
             for (var arg : args) {
                 System.out.println("Arg " + i++ + ": " + arg + ".");
@@ -68,4 +67,3 @@ public class RestoreNewArgsTest implements CracTest {
         }
     }
 }
-
